# custom-ci-cd

./: .travis.yml  CMakeLists.txt  README.md
src/: client.cpp
src/data/: serialization.cpp
src/include/data/: serialization.h
src/include/network/: server.h  session.h
src/network/: server.cpp  session.cpp
